# cuttlefish-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cuttlefish.example.toml  install.sh  uninstall.sh
.github/workflows/: build.yml  ci.yml  deploy-site.yml  docker.yml  release-server.yml  release-tui.yml  release.yml  version-tag.yml
.sisyphus/: V1-STATUS.md  architecture.md  boulder.json
.sisyphus/drafts/: v1-master-planning.md
.sisyphus/evidence/: fix-db-flaky.txt  task-1-completion.txt  task-1-crate-structure.txt  task-10-db-templates.txt  task-11-context-manager.txt  task-13-sandbox-limits.txt  task-14-vcs-tests.txt  task-15-github-client.txt  task-16-images.txt  task-17-agents.txt  task-18-orchestrator.txt  task-19-coder.txt  task-2-core-tests.txt  task-20-critic.txt  task-21-workflow.txt  task-22-discord.txt  task-23-25-discord-complete.txt  task-26-api-server.txt  task-27-29-api-complete.txt  task-3-docs.txt  task-30-34-webui.txt  task-35-tui.txt  task-36-37-tui-views.txt  task-38-43-advanced.txt  task-4-db-tests.txt  task-44-46-e2e.txt  task-5-ci-valid.txt  task-6-docs.txt  task-7-providers-tests.txt  task-8-claude-oauth-tests.txt  task-9-db-conversation.txt
.sisyphus/plans/: cuttlefish.md  install-sh-rewrite.md  install-sh-v2.md  v1-agents.md  v1-auth.md  v1-collaboration.md  v1-costs.md  v1-discord.md  v1-memory.md  v1-production.md  v1-safety.md  v1-sandbox.md  v1-templates.md  v1-tunnel.md  v1-webui.md
.sisyphus/workbreakdown/: v1-auth-wbs.md  v1-costs-wbs.md  v1-discord-wbs.md  v1-memory-wbs.md  v1-sandbox-wbs-raw.md  v1-sandbox-wbs.md
crates/cuttlefish-agents/: Cargo.toml
crates/cuttlefish-agents/src/: bus.rs  coder.rs  critic.rs  devops.rs  explorer.rs  integration_tests.rs  lib.rs  librarian.rs  orchestrator.rs  planner.rs  prompt_registry.rs  prompt_template.rs  runner.rs  tools.rs  workflow.rs
crates/cuttlefish-agents/src/context/: compactor.rs  counter.rs  mod.rs
crates/cuttlefish-agents/src/memory/: branch.rs  file.rs  hooks.rs  index.rs  log.rs  mod.rs  why.rs
crates/cuttlefish-agents/src/prompts/: _template.md  coder.md  critic.md  devops.md  explorer.md  librarian.md  orchestrator.md  planner.md
crates/cuttlefish-agents/src/safety/: checkpoint.rs  confidence.rs  diff.rs  gates.rs  mod.rs
crates/cuttlefish-agents/src/session/: journal.rs  mod.rs  persistence.rs
crates/cuttlefish-api/: Cargo.toml  build.rs
crates/cuttlefish-api/src/: api_routes.rs  approval_registry.rs  auth.rs  auth_routes.rs  collaboration_routes.rs  embedded_webui.rs  lib.rs  memory_routes.rs  organization_routes.rs  proxy.rs  routes.rs  safety_routes.rs  sandbox_routes.rs  system_routes.rs  usage_routes.rs  webui.rs  ws.rs
crates/cuttlefish-api/src/middleware/: auth.rs  mod.rs
crates/cuttlefish-core/: Cargo.toml
crates/cuttlefish-core/src/: advanced.rs  alerts.rs  config.rs  context.rs  costs.rs  error.rs  hashline.rs  lib.rs  pricing.rs  routing.rs  stats.rs  template_engine.rs  template_fetcher.rs  template_manifest.rs  template_registry.rs  tracing.rs
crates/cuttlefish-core/src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs  reset.rs  role.rs  session.rs  user.rs
crates/cuttlefish-core/src/traits/: agent.rs  bus.rs  mod.rs  provider.rs  sandbox.rs  vcs.rs
crates/cuttlefish-core/src/updater/: auto_update.rs  checker.rs  downloader.rs  mod.rs  restore.rs  shutdown.rs  task_state.rs
crates/cuttlefish-db/: Cargo.toml
crates/cuttlefish-db/migrations/: 001_initial_schema.sql
crates/cuttlefish-db/src/: activity.rs  api_keys.rs  approvals.rs  auth.rs  drafts.rs  handoffs.rs  invites.rs  lib.rs  message_queue.rs  models.rs  org_api_keys.rs  org_config.rs  organization.rs  password_reset.rs  roles.rs  sessions.rs  sharing.rs  usage.rs  workflow_state.rs
crates/cuttlefish-discord/: Cargo.toml
crates/cuttlefish-discord/src/: api_client.rs  archival.rs  bot.rs  channel_manager.rs  commands.rs  embeds.rs  formatter.rs  guild_config.rs  legacy_commands.rs  lib.rs
crates/cuttlefish-discord/src/commands/: approve.rs  logs.rs  mod.rs  new_project.rs  reject.rs  status.rs
crates/cuttlefish-lsp/: Cargo.toml
crates/cuttlefish-lsp/src/: client.rs  error.rs  lib.rs  registry.rs
crates/cuttlefish-mcp/: Cargo.toml
crates/cuttlefish-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  registry.rs  transport.rs
crates/cuttlefish-providers/: Cargo.toml
crates/cuttlefish-providers/src/: anthropic.rs  bedrock.rs  chatgpt_oauth.rs  claude_oauth.rs  google.rs  lib.rs  minimax.rs  mock.rs  moonshot.rs  oauth_flow.rs  ollama.rs  openai.rs  registry.rs  tracked.rs  xai.rs  zhipu.rs
crates/cuttlefish-sandbox/: Cargo.toml
crates/cuttlefish-sandbox/src/: cleanup.rs  docker.rs  health.rs  images.rs  lib.rs  lifecycle.rs  resources.rs  snapshots.rs  volumes.rs
crates/cuttlefish-tui/: Cargo.toml
crates/cuttlefish-tui/src/: app.rs  main.rs  mascot.rs  ui.rs  updater.rs
crates/cuttlefish-tunnel/: Cargo.toml
crates/cuttlefish-tunnel/src/: auth.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/cuttlefish-vcs/: Cargo.toml
crates/cuttlefish-vcs/src/: git.rs  github.rs  lib.rs
cuttlefish-site/: .env.example  .gitignore  README.md  dist  netlify.toml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
cuttlefish-site/components/: CodeBlock.vue  FAQItem.vue  FeatureCard.vue  ModelTable.vue  TemplateCard.vue  TemplateCardMini.vue  TerminalBlock.vue  TerminalDemo.vue
cuttlefish-site/layouts/: default.vue
cuttlefish-web/: .env.example  dist  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
deploy/: Dockerfile  Dockerfile.dashboard  Dockerfile.tunnel  README.md  docker-compose.yml
docker/: generic-base.Dockerfile  go-base.Dockerfile  node-base.Dockerfile  python-base.Dockerfile  rust-base.Dockerfile
prompts/: _template.md  claude_code_system.md  coder.md  critic.md  devops.md  explorer.md  librarian.md  orchestrator.md  planner.md  system.md
src/: main.rs
templates/: discord-bot.md  fastapi-postgres.md  nuxt-cloudflare.md  rust-axum.md  static-site.md
(+84 files in other folders)
