[workspace]
members = [
    ".",
    "crates/cuttlefish-core",
    "crates/cuttlefish-db",
    "crates/cuttlefish-providers",
    "crates/cuttlefish-sandbox",
    "crates/cuttlefish-vcs",
    "crates/cuttlefish-agents",
    "crates/cuttlefish-discord",
    "crates/cuttlefish-api",
    "crates/cuttlefish-tui",
    "crates/cuttlefish-tunnel",
    "crates/cuttlefish-mcp",
    "crates/cuttlefish-lsp",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"

[package]
name = "cuttlefish-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"
description = "Multi-agent, multi-model agentic coding platform"

[dependencies]
cuttlefish-core = { path = "crates/cuttlefish-core" }
cuttlefish-api = { path = "crates/cuttlefish-api" }
cuttlefish-db = { path = "crates/cuttlefish-db" }
cuttlefish-discord = { path = "crates/cuttlefish-discord" }
cuttlefish-tunnel = { path = "crates/cuttlefish-tunnel" }
cuttlefish-agents = { path = "crates/cuttlefish-agents" }
cuttlefish-providers = { path = "crates/cuttlefish-providers" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
dirs = "5"
base64 = "0.22"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
whoami = "1"
dashmap = "6"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
