[package]
name = "cuttlefish-agents"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
cuttlefish-core = { path = "../cuttlefish-core" }
cuttlefish-sandbox = { path = "../cuttlefish-sandbox" }
cuttlefish-providers = { path = "../cuttlefish-providers" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
cuttlefish-api = { path = "../cuttlefish-api" }
cuttlefish-db = { path = "../cuttlefish-db" }
