[package]
name = "cuttlefish-api"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
cuttlefish-core = { path = "../cuttlefish-core" }
cuttlefish-db = { path = "../cuttlefish-db" }
cuttlefish-agents = { path = "../cuttlefish-agents" }
cuttlefish-providers = { path = "../cuttlefish-providers" }
cuttlefish-sandbox = { path = "../cuttlefish-sandbox" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rand = "0.9"
dashmap = "6"
futures = "0.3"

[dev-dependencies]
axum-test = "15"
tempfile = "3"
