[package]
name = "cuttlefish-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.8"
