[package]
name = "cuttlefish-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
cuttlefish-db = { path = "../cuttlefish-db" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
argon2 = "0.5"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3.8"
