[package]
name = "cuttlefish-discord"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
cuttlefish-core = { path = "../cuttlefish-core" }
serenity = { version = "0.12", default-features = false, features = ["client", "cache", "gateway", "model", "http", "rustls_backend"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
