[package]
name = "cuttlefish-providers"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
cuttlefish-core = { path = "../cuttlefish-core" }
cuttlefish-db = { path = "../cuttlefish-db" }

# AWS Bedrock
aws-sdk-bedrockruntime = "1"
aws-config = "1"
aws-smithy-types = "1"

# Async
tokio = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# HTTP client for OAuth flow
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Crypto / hashing
base64 = "0.22"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID and time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (for tracked provider)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
tempfile = "3"
