[package]
name = "cuttlefish-tui"
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[[bin]]
name = "cuttlefish-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { workspace = true }
serde_json = "1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
