[package]
name = "cuttlefish-tunnel"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "WebSocket tunnel for Cuttlefish remote access"
license = "MIT"
publish = false

[lints]
workspace = true

[[bin]]
name = "tunnel-daemon"
path = "src/bin/tunnel-daemon.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9"
futures-util = "0.3"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
