[package]
name = "cuttlefish-vcs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[lints]
workspace = true

[dependencies]
cuttlefish-core = { path = "../cuttlefish-core" }
git2 = { version = "0.19", default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
